# pi_group

./: .env  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/services/: __init__.py
backend/services/alert/: __init__.py  models.py  routes.py  rule_engine.py  service.py
backend/services/auth/: __init__.py  dependencies.py  models.py  routes.py  security.py  seed.py  service.py
backend/services/command/: __init__.py  models.py  routes.py  service.py
backend/services/fleet/: __init__.py  models.py  routes.py  service.py
backend/services/gateway/: __init__.py  main.py
backend/services/gateway/middleware/: __init__.py  auth.py  rate_limiter.py
backend/services/gateway/routes/: __init__.py  actions.py  health.py  proxy.py
backend/services/mission/: __init__.py  models.py  mqtt_listener.py  routes.py  service.py
backend/services/telemetry/: __init__.py  mqtt_client.py  mqtt_listener.py  routes.py  service.py  websocket_manager.py
backend/shared/: __init__.py  action_registry.py  config.py  email.py  mqtt_client.py  mqtt_runtime.py
backend/shared/database/: mongo.py  postgres.py  redis.py
backend/shared/schemas/: __init__.py  action_semantics.py  alert.py  auth.py  command.py  mission.py  mission_graph.py  telemetry.py  vehicle.py
dashboard/: .env.example  Dockerfile  README.md  nginx.conf  package-lock.json  package.json  vite.config.js
edge-agent/: Dockerfile  README.md  pyproject.toml
edge-agent/src/aerocommand_edge_agent/: config.py  main.py  mavlink_reader.py  mqtt_bridge.py  telemetry_state.py
shared_python/: README.md  pyproject.toml
shared_python/src/backend/: __init__.py
shared_python/src/backend/shared/: config.py  mqtt_client.py  mqtt_topics.py
shared_python/src/backend/shared/database/: __init__.py  postgres.py  redis.py
shared_python/src/backend/shared/mavlink/: __init__.py  definitions.py
shared_python/src/backend/shared/schemas/: __init__.py  action_semantics.py  auth.py  mission.py  mission_graph.py  vehicle.py
(+129 files in other folders)
