[project]
name = "aerocommand-backend"
version = "1.0.0"
description = "AeroCommand – Cloud Drone & Robot Fleet Management Platform"
requires-python = ">=3.11"
license = { text = "Proprietary" }

[tool.ruff]
target-version = "py311"
line-length = 120
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

